# peat-sapient

./: CLAUDE.md  Cargo.toml  README.md  SKILL.md  build.rs
.cargo/: audit.toml
.github/workflows/: ci.yml  qa-review.yml
compliance/SapientComplianceRunner/: AsyncMessageChannel.cs  DlmmScenario.cs  HldmmScenario.cs  MessageFactory.cs  Program.cs  README.md  SapientComplianceRunner.csproj  TestResult.cs
docs/: PLAN.md  c2-collaboration.md  compliance.md  developer-guide.md  operator-guide.md
peat-mesh-sapient/: Cargo.toml
peat-mesh-sapient/benches/: translator.rs  transport.rs
peat-mesh-sapient/src/: lib.rs  subscriber.rs  translator.rs  transport.rs
peat-mesh-sapient/tests/: bridge_mesh_integration.rs  cross_protocol_contract.rs  dlmm_integration.rs  fanout_e2e.rs  hldmm_integration.rs
peat-sapient/: Cargo.toml
peat-sapient-bridge/: Cargo.toml  bridge.example.toml
peat-sapient-bridge/src/: config.rs  main.rs
peat-sapient-bridge/tests/: bidirectional_fanout.rs  network_e2e.rs
peat-sapient/benches/: event_driven.rs
peat-sapient/src/: bridge.rs  codec.rs  connection.rs  error.rs  lib.rs  mesh_fields.rs  registry.rs  task_queue.rs  watchdog.rs
peat-sapient/src/transform/: alert.rs  detection.rs  mod.rs  registration.rs  status.rs
peat-sapient/tests/: proto_roundtrip.rs  tls_connection.rs
peat-sapient/tests/integration/: apex_harness.rs  bridge_lifecycle.rs  inbound_flow.rs  mod.rs  outbound_flow.rs
proto/: VERSION
proto/sapient_msg/bsi_flex_335_v2_0/: registration.proto
src/: bridge.rs  codec.rs  connection.rs  lib.rs  proto.rs  rate_limit.rs  registry.rs  task_queue.rs
src/transform/: alert.rs  detection.rs  mod.rs  registration.rs  status.rs  task.rs
tests/: codec_tests.rs  connection_tests.rs
tests/integration/: bridge_lifecycle.rs  mod.rs  outbound_flow.rs
