[package]
name = "peat-sapient"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
repository = "https://github.com/defenseunicorns/peat-sapient"
description = "SAPIENT (BSI Flex 335) protocol library and Peat mesh bridge — sensor and autonomous platform integration"
keywords = ["sapient", "sensor", "autonomous", "mesh", "defense"]
categories = ["network-programming", "encoding"]

[lib]
# Disable doc tests: prost generates comments from proto field docs that cargo
# mistakes for Rust code examples. Real tests live in tests/ and src/ #[cfg(test)].
doctest = false

[features]
default = ["peat"]
# Layer 2: peat-schema transformer. Disable with default-features = false for standalone SAPIENT lib.
peat = ["dep:peat-schema", "dep:ulid"]
# Integration tests against the Apex SAPIENT middleware (requires apex.py on PATH).
integration-tests = []

[dependencies]
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

# Layer 2 deps — only when feature "peat" is enabled.
peat-schema = { version = "0.9.0-rc.24", optional = true }
# ULID generation for SAPIENT task_id fields (mandatory in BSI Flex 335 v2.0).
ulid = { version = "1", optional = true }

futures-util = { version = "0.3", features = ["sink"] }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
