[workspace]
resolver = "2"
members = ["peat-sapient", "peat-mesh-sapient", "peat-sapient-bridge"]

[patch.crates-io]
peat-protocol = { git = "https://github.com/defenseunicorns/peat", rev = "dd5e7983" }
peat-schema = { git = "https://github.com/defenseunicorns/peat", rev = "dd5e7983" }
peat-tak = { git = "https://github.com/defenseunicorns/peat-tak", rev = "5b1cd40" }
