[package]
name = "peat-mesh-sapient"
version = "0.1.0"
edition = "2021"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
repository = "https://github.com/defenseunicorns/peat-sapient"
description = "peat-mesh Translator/Transport adapter for peat-sapient — ADR-059 Amendment 4 one-way adapter crate (SAPIENT is application-domain-specific, not a universal transport)"
keywords = ["sapient", "peat-mesh", "translator", "mesh", "defense"]
categories = ["network-programming", "encoding"]

[lib]
doctest = false

[features]
default = []
tls = ["peat-sapient/tls"]

[dependencies]
# One-way: this crate depends on peat-mesh (for the Translator/Transport traits)
# and peat-sapient (for the wire codec), never the reverse. See ADR-059
# Amendment 4 — peat-sapient itself has zero peat-mesh dependency.
peat-mesh = { version = "0.9.0-rc.41", default-features = false }
peat-sapient = { path = "../peat-sapient", default-features = false, features = ["translator-codec"] }
peat-schema = "0.9.0-rc.30"

async-trait = "0.1"
anyhow = "1"
serde_json = "1"
prost = "0.13"
tokio = { version = "1", features = ["net", "rt", "sync", "time", "macros"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "translator"
harness = false

[[bench]]
name = "transport"
harness = false
